Ajout du pipeline avec GitHub Actions

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,3 +23,5 @@ jobs:
           context: .
           push: true
           tags: abdoulaye02/abouta-landing-page:latest
+          labels: |
+            org.opencontainers.image.source=https://github.com/abdoulaye-96/landingPage
